# alvm

./: Cargo.toml  Makefile  README.md  build.rs  dump.txt
src/: kernel.rs  lib.rs  loader.rs  stack.rs  vcpu_util.rs  xlogger.rs
src/default_kernel/: mod.rs
src/xlibc/: mod.rs
src/xlibc/linux/: README.md  all_headers.h  c.rs  mod.rs
src/xlibc/macos/: mod.rs
tests/: integration.rs
tests/cases/asm/: entry.S  fault.S  hello_world.S  invalid_syscall.S
tests/cases/c/: env.c  hello_world.c
