[package]
name = "alvm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "alvm"
path = "src/default_kernel/bin/main.rs"

[dependencies]
applevisor = "0.1.1"
elf = "0.7.4"
rand = "0.9.0-alpha.1"
aarch64-esr-decoder = "0.2.3"
log = { version = "0.4.21", features = ["release_max_level_warn", "std"] }
once_cell = "1.19.0"
libc = "0.2.153"
